Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,5 +1,5 @@
-"Jeremiah"
-"Cucumbers"
-"Danny"
-"Coke"
-"Mary Jane"
+<li>"Jeremiah"</li>
+<li>"Cucumbers"</li>
+<li>"Danny"</li>
+<li>"Coke"</li>
+<li>"Mary Jane"</li>
