--- a/my_list.html
+++ b/my_list.html
@@ -1,7 +1,9 @@
-<ol>
+<p>This is a list of my favortie things!
+</p>
+<ul>
   <li>"Jeremiah"</li>
   <li>"Cucumbers"</li>
   <li>"Danny"</li>
   <li>"Coke"</li>
   <li>"Mary Jane"</li>
-</ol>
+</ul>
